gcc/testsuite/g++.old-deja/g++.brendan/err-msg7.C
// { dg-do assemble  }
// GROUPS passed error-messages
class foo {
public:
  volatile int () {}// { dg-error "" } 
};
